
13 March 2013
+ Add multiple_mmap_sizes test
+ Add hw_sw_mix test

29 January 2013
+ Add sw_start_leader test

27 November 2012
+ Add simul_oneshot_group_overflow test
+ Release version 0.27

26 November 2012
+ Add overflow_requires_wakeup test

23 November 2012
+ Add wakeup_events_overflow test

21 November 2012
+ Add single-shot overflow test
+ Add single_shot_w_enable

4 November 2012
+ Make new validation_privileged category

25 October 2012
+ Add uncore test

14 September 2012
+ Add simultaneous_group_overflow test
+ Add simultaneous_overflow

21 August 2012
+ Add check_reset_mpx test

20 August 2012
+ Add multiplexing test

16 August 2012
+ Add reset_leader test

9 August 2012
+ Add enable_on_exec test

7 August 2012
+ Add breakpoint test
+ Add some inherit tests

13 July 2012
+ Fix rdpmc tests to not segfault if support not in kernel
+ Add a few tests
+ Release version 0.26

21 December 2011
+ Add some rdpmc() tests
+ Release version 0.25

8 September 2011
+ Re-arrange directory structure a bit
+ Add the corner_cases/signal_after_exec test
+ For corner cases now print results as OLD/NEW BEHAVIOR
+ Add the bugs/nmi_watchdog_group_leader test
+ Release version 0.24


10 August 2011
+ Add branches ARM assembly thanks to sam wang.
  This turned up a bug in Cortex A9 kernel generalized event.
+ Release version 0.23

5 August 2011
+ Add a PAPI test that looks for a race condition when
  we lookup/add events from multiple threads at once.
+ Release version 0.22

3 August 2011
+ Minor fixes to crashes/oflo_sw_cpu_clock_crash
+ Some minor changes to OFFCORE_EVENTS while testing
  some kernel patches.
+ Release version 0.21

2 August 2011
+ Add ARM instruction test code
+ Add code to set the domain properly (exclude_kernel,user,hv all 0)
  on ARMv7
+ Release version 0.20

28 July 2011
+ Add oflo_sw_cpu_clock_crash crash code
+ Release version 0.19

12 July 2011
+ Add check for ENOSPC being returned when buffers are too small
+ Release version 0.18

5 July 2011